--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/arinmis/hackers-dictionary#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "yargs": "^17.7.1"
   }
 }
