--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hackers-dictionary",
   "version": "1.0.0",
   "description": "Terminal dictionary to quickly look up English words",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,9 +22,10 @@
   "homepage": "https://github.com/arinmis/hackers-dictionary#readme",
   "dependencies": {
     "axios": "^1.3.4",
+    "chalk": "^5.2.0",
     "yargs": "^17.7.1"
   },
   "bin": {
-   "mean": "./index.js"
+    "mean": "./index.js"
   }
 }
